docs/0.12/_sources/api/gammapy.spectrum.SpectrumDataset.rst.txt
SpectrumDataset
===============

.. currentmodule:: gammapy.spectrum

.. autoclass:: SpectrumDataset
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectrumDataset.data_shape
      ~SpectrumDataset.energy_range
      ~SpectrumDataset.mask
      ~SpectrumDataset.model
      ~SpectrumDataset.parameters

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectrumDataset.copy
      ~SpectrumDataset.fake
      ~SpectrumDataset.likelihood
      ~SpectrumDataset.likelihood_per_bin
      ~SpectrumDataset.npred

   .. rubric:: Attributes Documentation

   .. autoattribute:: data_shape
   .. autoattribute:: energy_range
   .. autoattribute:: mask
   .. autoattribute:: model
   .. autoattribute:: parameters

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: fake
   .. automethod:: likelihood
   .. automethod:: likelihood_per_bin
   .. automethod:: npred
